Tối ưu phần đặt lệnh mua/bán, phần khớp lệnh, sao kê, trang chủ, bảng giá